--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "masmerise/livewire-toaster": "^2.8",
+        "php-ffmpeg/php-ffmpeg": "^1.3",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
